<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.ui.login.in.InLoginFragment">

        <TextView
            android:id="@+id/label_in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:labelFor="@+id/reg_email"
            android:paddingStart="@dimen/padding_label_start_end"
            android:paddingEnd="@dimen/padding_label_start_end"
            android:text="@string/reg_label_email"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/in_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_edit_reg"
            android:textSize="@dimen/large_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_in_email" />

        <TextView
            android:id="@+id/label_in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:labelFor="@+id/reg_email"
            android:paddingStart="@dimen/padding_label_start_end"
            android:paddingEnd="@dimen/padding_label_start_end"
            android:text="@string/label_password"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/in_email" />

        <EditText
            android:id="@+id/in_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="@dimen/padding_edit_reg"
            android:textSize="@dimen/large_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_in_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/in_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:background="@color/accent"
            android:text="@string/sing_in"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/in_password"
            tools:ignore="TextContrastCheck" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/in_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:background="@color/accent"
            android:text="@string/registration"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/in_login"
            tools:ignore="TextContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>