<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".presentation.ui.login.reg.RegLoginFragment">

        <TextView
            android:id="@+id/label_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:labelFor="@+id/reg_email"
            android:paddingStart="@dimen/padding_label_start_end"
            android:paddingEnd="@dimen/padding_label_start_end"
            android:text="@string/reg_label_email"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/reg_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:padding="@dimen/padding_edit_reg"
            android:textSize="@dimen/large_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_email" />

        <TextView
            android:id="@+id/label_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_vertical"
            android:labelFor="@+id/reg_email"
            android:paddingStart="@dimen/padding_label_start_end"
            android:paddingEnd="@dimen/padding_label_start_end"
            android:text="@string/label_password"
            android:textSize="@dimen/medium_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_email" />

        <EditText
            android:id="@+id/reg_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="@dimen/padding_edit_reg"
            android:textSize="@dimen/large_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_password" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:background="@color/accent"
            android:text="@string/registration"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reg_password"
            tools:ignore="TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>